# hacking

./: .gitignore
src/c/: generate_nml_cfg.c  priority_range.c
src/c++/: JobArrange.cpp  JobParser.cpp  result.ngc
src/c++/job_expansion/: JobArrange.cpp  SConstruct
src/c++/my_math/: line2line.cpp  line2line.h
src/c++/xmlparser/: LaserXmlParser.cpp  LaserXmlParser.h  SConstruct  XmlParser.cpp  XmlParser.h  laser_param.xml  main.cpp
src/draft/: CMakeLists.txt  HardInfo.info  LaserParam.rar  derived_class_layout.cpp  fscanf_test.cpp  macro_explore.cpp  plc_nml.i  sscanf_test.c  test.cpp  xml-editor.py
src/draft/zeromq/: build.sh  hwclient.c  hwserver.c
src/linux-sh/: change_ip.sh
src/python/: F7000Param.py  change_ip.py  demo.ngc  format_xml.py  job_extend.py
src/qt/: GetIPAddress.cpp
src/windows/: GetMainWndByExeName.cpp  windows_system.cpp
